ingress/nginx-app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app1-service
  namespace: default
  labels:
    app: nginx-app1
spec:
  selector:
    app: nginx-app1
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
