ingress/nginx-app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app2-service
  namespace: default
  labels:
    app: nginx-app2
spec:
  selector:
    app: nginx-app2
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
