ingress/nginx-app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app3-service
  namespace: default
  labels:
    app: nginx-app3
spec:
  selector:
    app: nginx-app3
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
